...
  sessions: readonly Session[]
  session: Session | null
  setSession: (session: Session | null) => void
  forcedIdentifier?: string

  onSignIn: (
    credentials: SignInFormOutput,
    signal: AbortSignal,
  ) => void | PromiseLike<void>
  onSignUp?: () => void
  onForgotPassword?: (emailHint?: string) => void
  onBack?: () => void
  backLabel?: ReactNode
...
