...
        getComponent={() => ProposalDetailScreen}
        options={{title: title(msg`Proposal`), requireAuth: true}}
      />
      <Stack.Screen
        name="MyWallet"
        getComponent={() => WalletScreen}
        options={{title: title(msg`My Wallet`), requireAuth: true}}
      />
      <Stack.Screen
        name="VerifyDashboard"
        getComponent={() => VerifyDashboardScreen}
        options={{title: title(msg`Verify Dashboard`), requireAuth: true}}
      />
...
